--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <script src="scripts/jquery-1.6.1.js"></script>
 <script src="scripts/jcanvas.min.js"></script>
+<script src="scripts/b.loader.js"></script>
 <script src="scripts/collision.js"></script>
 <script src="scripts/position.js"></script>
 <script src="scripts/impact.js"></script>
